kube/deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web
  namespace: shtik
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: shtik/web:1.1.0
        imagePullPolicy: Always
        name: web
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: shtik
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
  selector:
    app: web
  sessionAffinity: ClientIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: shtik
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - shtik.io
    secretName: shtik-tls
  rules:
  - host: shtik.io
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
